# PACT-CUSNN

./: README.md
2080Ti/: run_2080Ti.py  run_layers_eval.py
2080Ti/end2end-model-eval/densenet169/: CMakeLists.txt
2080Ti/end2end-model-eval/densenet169/inc/: cudnnOps.h
2080Ti/end2end-model-eval/densenet169/src/: ConvBlk.cu  main.cu
2080Ti/end2end-model-eval/densenet169Scnn/: CMakeLists.txt
2080Ti/end2end-model-eval/densenet169Scnn/inc/: convBlk.h  scnn.h
2080Ti/end2end-model-eval/densenet169Scnn/src/: Add.cu  ConvBlk.cu  Conv_1_128_14_14_32.cu  Conv_1_128_56_56_32.cu  Conv_1_128_7_7_32.cu  main.cu  relu.cu
2080Ti/end2end-model-eval/densenet201/: CMakeLists.txt
2080Ti/end2end-model-eval/densenet201/inc/: cudnnOps.h
2080Ti/end2end-model-eval/densenet201/src/: FC.cu  main.cu
2080Ti/end2end-model-eval/densenet201Scnn/: CMakeLists.txt
2080Ti/end2end-model-eval/densenet201Scnn/inc/: convBlk.h  cudnnOps.h  scnnOps.h
2080Ti/end2end-model-eval/densenet201Scnn/src/: Conv_1_128_28_28_32.cu  main.cu
2080Ti/end2end-model-eval/resnet152/: CMakeLists.txt
2080Ti/end2end-model-eval/resnet152/inc/: conv1.h
2080Ti/end2end-model-eval/resnet152/src/: Conv.cu  conv_56_56_64_64.cu  main.cu
2080Ti/end2end-model-eval/resnet152Scnn/: CMakeLists.txt
2080Ti/end2end-model-eval/resnet152Scnn/inc/: scnn.h  scnnOps.h
2080Ti/end2end-model-eval/resnet152Scnn/src/: main.cu
2080Ti/end2end-model-eval/resnet50/: CMakeLists.txt
2080Ti/end2end-model-eval/resnet50/src/: ConvBlk6.cu  ConvBlk8.cu  main.cu
2080Ti/end2end-model-eval/resnet50Scnn/inc/: common.h  scnn.h  scnnOps.h
2080Ti/end2end-model-eval/resnet50Scnn/src/: ConvBlk5.cu  ConvBlk7.cu  Conv_1_128_28_28_128.cu  Conv_1_256_14_14_256.cu  Conv_1_512_7_7_512.cu  Conv_1_64_56_56_64.cu  main.cu
2080Ti/end2end-model-eval/vgg16/: CMakeLists.txt  main.cu  vgg19.py
2080Ti/end2end-model-eval/vgg16/inc/: common.h
2080Ti/end2end-model-eval/vgg16/src/: Concate.cu  common.cpp  conv_and_pool.cu
2080Ti/end2end-model-eval/vgg16Scnn/: CMakeLists.txt  vgg16  vgg19.py
2080Ti/end2end-model-eval/vgg16Scnn/inc/: conv_and_pool.h  scnn.h  scnnOps.h
2080Ti/end2end-model-eval/vgg16Scnn/src/: Conv_1_128_112_112_128.cu  Conv_1_256_28_28_512.cu  Conv_1_256_56_56_256.cu  Conv_1_512_14_14_512.cu  Conv_1_512_28_28_512.cu  Conv_1_64_224_224_64.cu  Relu.cu  common.cpp  main.cu  test  test.cu
2080Ti/end2end-model-eval/vgg19/: CMakeLists.txt  main.cu
2080Ti/end2end-model-eval/vgg19/inc/: conv_and_pool.h
2080Ti/end2end-model-eval/vgg19Scnn/: CMakeLists.txt  main.cu  vgg19.py
2080Ti/end2end-model-eval/vgg19Scnn/inc/: conv_and_pool.h
2080Ti/end2end-model-eval/vgg19Scnn/src/: Conv_1_128_112_112_128.cu  Conv_1_256_28_28_512.cu  Conv_1_256_56_56_256.cu  Conv_1_512_14_14_512.cu  Conv_1_512_28_28_512.cu  Conv_1_64_224_224_64.cu  Relu.cu  relu.cu
2080Ti/layers_eval/densenet201Scnn/: CMakeLists.txt
2080Ti/layers_eval/densenet201Scnn/inc/: common.h  convBlk.h  cudnnOps.h  scnn.h  scnnOps.h
2080Ti/layers_eval/densenet201Scnn/src/: BatchNorm.cu  Concate.cu  Conv.cu  Conv_1_128_14_14_32.cu  Conv_1_128_28_28_32.cu  Conv_1_128_56_56_32.cu  Conv_1_128_7_7_32.cu  conv_1_128_14_14_32.cu  conv_1_128_28_28_32.cu  conv_1_128_56_56_32.cu  conv_1_128_7_7_32.cu  main.cu  main2.cu
2080Ti/layers_eval/eval_cudnn/: CMakeLists.txt  cudnn_layers.txt  run.py
2080Ti/layers_eval/eval_cudnn/inc/: common.h
2080Ti/layers_eval/eval_cudnn/src/: Conv.cu  main.cu
2080Ti/layers_eval/resnet152Scnn/: CMakeLists.txt
2080Ti/layers_eval/resnet152Scnn/inc/: ConvBlk1.cu  convBlk.h  e.h  scnn.h  scnnOps.h
2080Ti/layers_eval/resnet152Scnn/src/: Conv_1_128_28_28_128.cu  Conv_1_256_14_14_256.cu  Conv_1_512_7_7_512.cu  Conv_1_64_56_56_64.cu  Relu.cu  conv_1_128_28_28_128.cu  conv_1_256_14_14_256.cu  conv_1_512_7_7_512.cu  conv_1_64_56_56_64.cu  main-tagged.cu  main.cu  relu.cu
2080Ti/weights/vgg19/: get_weights.py
v100/: clean.py  run_layers_eval.py  run_v100.py
v100/end2end-energy-eval/densenet169/inc/: common.h
v100/end2end-energy-eval/densenet169/src/: PoolBlk.cu  main.cu
v100/end2end-energy-eval/densenet169Scnn/: CMakeLists.txt
v100/end2end-energy-eval/densenet169Scnn/inc/: common.h  convBlk.h  scnnOps.h
v100/end2end-energy-eval/densenet169Scnn/src/: Concate.cu  ConvBlk.cu  Conv_1_128_28_28_32.cu  main.cu
v100/end2end-energy-eval/densenet201/: CMakeLists.txt
v100/end2end-energy-eval/densenet201/inc/: convBlk.h
v100/end2end-energy-eval/densenet201/src/: Concate.cu  main.cu
v100/end2end-energy-eval/densenet201Scnn/: CMakeLists.txt
v100/end2end-energy-eval/resnet152Scnn/: CMakeLists.txt
v100/end2end-energy-eval/resnet50Scnn/: CMakeLists.txt
v100/end2end-energy-eval/resnet50Scnn/inc/: convBlk.h
v100/end2end-energy-eval/resnet50Scnn/src/: main.cu
v100/end2end-energy-eval/vgg16/: CMakeLists.txt  main.cu
v100/end2end-energy-eval/vgg16Scnn/: CMakeLists.txt
v100/end2end-energy-eval/vgg19/: main.cu  vgg19.py
v100/end2end-energy-eval/vgg19Scnn/: CMakeLists.txt  main.cu
v100/end2end-model-eval/densenet169/: CMakeLists.txt
v100/end2end-model-eval/resnet152/: CMakeLists.txt
v100/end2end-model-eval/resnet50/: CMakeLists.txt
v100/end2end-model-eval/resnet50/src/: BatchNorm.cu  ConvBlk4.cu  main.cu
v100/end2end-model-eval/vgg16/: main.cu
v100/end2end-model-eval/vgg19/: CMakeLists.txt  main.cu
v100/end2end-model-eval/vgg19Scnn/: main.cu
v100/layers_eval/densenet201Scnn/: CMakeLists.txt
v100/layers_eval/eval_cudnn/: CMakeLists.txt  conv_layer_id.csv
v100/layers_eval/eval_cudnn/inc/: cudnnOps.h
v100/layers_eval/eval_cudnn/src/: common.cpp  main.cu
v100/layers_eval/resnet152Scnn/: CMakeLists.txt
v100/weights/vgg16/: get_weights.py
weights/resnet50/weights/: get_weights.py
(+135 files in other folders)
